top-banner added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ifran portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<link rel="stylesheet" href="style.css">
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>WELCOME TO</h1>
+            <h1><span class="iv-co">IFRAN AHMED</span> WORLD!</h1>
+            <h3>hard worker and Helping Hand</h3>
+            <p>I want to succes in my life.so i daily do hard work.I alawys help my father because we have small
+                bussnise.my
+                dad is owner of our hotel.we all do hard work.i love my family so much</p>
+
+            <a class="link-b" href="
+        https://www.facebook.com/profile.php?id=100087575468625&mibextid=zLoPMf
+        
+        Ifran Sheikh
+        ">Hire me</a>
+
+        </div>
+
+        <div class="half-width">
+            <img src="if 987 nh png.jpg" alt="">
+        </div>
+    </section>
 </body>
-</html>
+<html>
