--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
         </div>
 
         <div class="half-width">
-            <img src="if 987 nh png.jpg" alt="">
+            <img src="ifran-png.jpg" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+
+        <div class="half-width">
+            <img src="Picsart_23-12-26_20-02-02-146.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I learn the basic info of web programming.Its hard but i have a big brother who motivate me.I will try my
+                best.ONe day i will reach in my goal.</p>
+            <a class="link-b" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
